<?xml version="1.0"?>
<package format="2">
  <name>realsense_tower</name>
  <version>0.0.0</version>
  <description>The realsense_tower package</description>

  <maintainer email="julie@todo.todo">julie</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>

